--- a/config/kaggle4.yaml
+++ b/config/kaggle4.yaml
@@ -43,8 +43,8 @@ trainer:
   epochs: 120
   log_iter: 10
   show_images_iter: 50
-  resume_checkpoint: ""
-  finetune_checkpoint: ""
+  resume_checkpoint: "/kaggle/working/DB-/model_latest.pth"
+  finetune_checkpoint: "/kaggle/working/DB-/model_best.pth"
   output_dir: output
   tensorboard: true
 dataset:
