--- a/config/kaggle4.yaml
+++ b/config/kaggle4.yaml
@@ -3,7 +3,7 @@ base: ["config/icdar2015.yaml"]
 arch:
   type: Model
   backbone:
-    type: deformable_resnet18
+    type: resnet18
     pretrained: true
   neck:
     type: FPN
@@ -15,10 +15,10 @@ arch:
 post_processing:
   type: SegDetectorRepresenter
   args:
-    thresh: 0.3
-    box_thresh: 0.5
+    thresh: 0.25
+    box_thresh: 0.35
     max_candidates: 1000
-    unclip_ratio: 1.7 # from paper
+    unclip_ratio: 2.0 # from paper
 metric:
   type: QuadMetric
   args:
@@ -31,7 +31,7 @@ loss:
 optimizer:
   type: Adam
   args:
-    lr: 0.0001
+    lr: 0.001
     weight_decay: 0
     amsgrad: true
 lr_scheduler:
@@ -40,7 +40,7 @@ lr_scheduler:
     warmup_epoch: 3
 trainer:
   seed: 2
-  epochs: 200
+  epochs: 100
   log_iter: 10
   show_images_iter: 50
   resume_checkpoint: ""
