--- a/config/kaggle4.yaml
+++ b/config/kaggle4.yaml
@@ -44,14 +44,15 @@ trainer:
   log_iter: 10
   show_images_iter: 50
   resume_checkpoint: ""
-  finetune_checkpoint: ""
+  finetune_checkpoint: "/kaggle/working/DB-/model_best.pth"
   output_dir: output
   tensorboard: true
 dataset:
   train:
     dataset:
       args:
-        data_path: ./datasets/SynthText
+        data_path:
+          - /kaggle/working/DB-/train.txt
         img_mode: RGB
     loader:
       batch_size: 2
