--- a/config/kaggle4.yaml
+++ b/config/kaggle4.yaml
@@ -1,9 +1,9 @@
 name: DBNet
-base: ["config/SynthText.yaml"]
+base: ["config/icdar2015.yaml"]
 arch:
   type: Model
   backbone:
-    type: resnet34
+    type: resnet50
     pretrained: true
   neck:
     type: FPN
@@ -16,7 +16,7 @@ post_processing:
   type: SegDetectorRepresenter
   args:
     thresh: 0.3
-    box_thresh: 0.7
+    box_thresh: 0.6
     max_candidates: 1000
     unclip_ratio: 1.5 # from paper
 metric:
@@ -40,7 +40,7 @@ lr_scheduler:
     warmup_epoch: 3
 trainer:
   seed: 2
-  epochs: 1200
+  epochs: 60
   log_iter: 10
   show_images_iter: 50
   resume_checkpoint: ""
@@ -51,10 +51,11 @@ dataset:
   train:
     dataset:
       args:
-        data_path: "/kaggle/working/DB-/train.txt"
+        data_path:
+          - /kaggle/working/DB-/train.txt
         img_mode: RGB
     loader:
-      batch_size: 2
+      batch_size: 16
       shuffle: true
       pin_memory: true
       num_workers: 6
@@ -62,7 +63,8 @@ dataset:
   validate:
     dataset:
       args:
-        data_path: "/kaggle/working/DB-/test.txt"
+        data_path:
+          - /kaggle/working/DB-/test.txt
         pre_processes:
           - type: ResizeShortSize
             args:
