--- a/config/kaggle4.yaml
+++ b/config/kaggle4.yaml
@@ -44,7 +44,7 @@ trainer:
   log_iter: 10
   show_images_iter: 50
   resume_checkpoint: ""
-  finetune_checkpoint: "/kaggle/working/DB-/model_best.pth"
+  finetune_checkpoint: ""
   output_dir: output
   tensorboard: true
 dataset:
