--- a/config/kaggle4.yaml
+++ b/config/kaggle4.yaml
@@ -44,7 +44,7 @@ trainer:
   log_iter: 10
   show_images_iter: 50
   resume_checkpoint: ""
-  finetune_checkpoint: ""
+  finetune_checkpoint: "/kaggle/working/DB-/model_best.pth"
   output_dir: output
   tensorboard: true
 dataset:
@@ -55,7 +55,7 @@ dataset:
           - /kaggle/working/DB-/train.txt
         img_mode: RGB
     loader:
-      batch_size: 16
+      batch_size: 8
       shuffle: true
       pin_memory: true
       num_workers: 6
